alignment fix

--- a/style.css
+++ b/style.css
@@ -96,8 +96,6 @@ body {
     transform: scale(0.25);
     border-radius: 5px;
 	transition: transform 0.2s cubic-bezier(0.61, 1, 0.88, 1);
-    margin-left: 50px;
-    margin-right: 500px;
 }
 
 .contact-link:hover {
